--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -43,7 +43,9 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
   </a>
   <div class="offcanvas offcanvas-bottom" style="height: 90vh!important;" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasBottomLabel">Filter</h5>
+      <h5 class="offcanvas-title" id="offcanvasBottomLabel">Filter <svg xmlns="http://www.w3.org/2000/svg" style="width: 25px;height:25px" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" />
+      </svg></h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
@@ -140,7 +142,9 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
         </a>
         <div class="offcanvas offcanvas-bottom" style="height: 90vh!important;" tabindex="-1" id="offcanvasBottom3" aria-labelledby="offcanvasBottom3Label">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasBottom3Label">Toolbox</h5>
+            <h5 class="offcanvas-title" id="offcanvasBottom3Label">Sort <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-sort-down" viewBox="0 0 16 16">
+              <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293V2.5zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
+            </svg></h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -174,7 +178,10 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
         </a>
         <div class="offcanvas offcanvas-bottom" style="height: 90vh!important;" tabindex="-1" id="offcanvasBottom2" aria-labelledby="offcanvasBottom2Label">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasBottom2Label">Category</h5>
+            <h5 class="offcanvas-title" id="offcanvasBottom2Label">Category <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-watch" viewBox="0 0 16 16">
+              <path d="M8.5 5a.5.5 0 0 0-1 0v2.5H6a.5.5 0 0 0 0 1h2a.5.5 0 0 0 .5-.5V5z"/>
+              <path d="M5.667 16C4.747 16 4 15.254 4 14.333v-1.86A5.985 5.985 0 0 1 2 8c0-1.777.772-3.374 2-4.472V1.667C4 .747 4.746 0 5.667 0h4.666C11.253 0 12 .746 12 1.667v1.86a5.99 5.99 0 0 1 1.918 3.48.502.502 0 0 1 .582.493v1a.5.5 0 0 1-.582.493A5.99 5.99 0 0 1 12 12.473v1.86c0 .92-.746 1.667-1.667 1.667H5.667zM13 8A5 5 0 1 0 3 8a5 5 0 0 0 10 0z"/>
+            </svg></h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body d-flex justify-content-center">
