--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -96,10 +96,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
                         <input type = "submit" name = "create" value="old">
                         <input type = "submit" name = "discount" value="most_discout">
                         <input type = "submit" name = "favourite" value="most_popular">
-                        <input type = "submit" name = "sell" value="most_sell">
-                        
-                            {{ form }}
-                        
+                        <input type = "submit" name = "sell" value="most_sell">                     
                       </div>
               </div>
             </div>
@@ -160,7 +157,6 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
                       {{ filter.form.brand }}
                       {{ filter.form.color }}
                       {{ filter.form.category }}
-                      {{form}}
                   </div>
               </div>
           </form>
@@ -435,6 +431,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
           <div style="display: flex;flex-direction: column;margin-top: 2rem;">
             <button type="submit" class="btn btn-outline-dark btn-lg">submit</button>
           </div>
+        </form>
   </div>
   </div>
   <div class="col-9">
