--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -14,7 +14,7 @@ background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
 background: linear-gradient(to right, #38393b, #1c1e1f);">
    <div class="container-fluid d-lg-none">
     <div class="mt-4 pb-3 border-bottom d-sm-flex flex-sm-wrap flex-sm-row-reverse">
-      <form method="post" action="product" class="d-flex col-sm-5 justify-content-sm-end justify-content-center mb-3 mb-sm-0">
+      <form method="post" action="" class="d-flex col-sm-5 justify-content-sm-end justify-content-center mb-3 mb-sm-0">
         {% csrf_token %}
         <div class="d-flex align-items-end justify-content-between"> 
           <div style="display: none">
