--- a/first_web/home/templates/detail.html
+++ b/first_web/home/templates/detail.html
@@ -160,7 +160,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
           </div>
         </div>
         <div style="position: relative;">
-         <img src="{{products.image.url}}" alt="" class="col-12 main-img" style="height: 60vh;" />
+         <img src="{{products.image.url}}" alt="" class="col-12 main-img bg-white" style="height: 60vh;" />
          <div style="position: absolute;bottom:0px;">
            <small class="text-muted ps-2" style="font-size: xx-small;">{{products.update}}</small>
          </div> 
