--- a/first_web/accounts/templates/accounts/update.html
+++ b/first_web/accounts/templates/accounts/update.html
@@ -16,8 +16,10 @@
     <form action="" method="post" enctype="multipart/form-data">
         <img src="{{request.user.profile.profile_image.url}}" style="width: 50px;height: 50px;" alt="">
         {% csrf_token %}
-        {{ user_form.as_p}}
-        {{ profile_form.as_p}}
+        {{ user_form.as_p }}
+        {{ profile_form.phone }}<br><br>
+        {{ profile_form.address }}<br><br>
+        {{ profile_form.profile_image }}<br><br>
         <button type="submit">submit</button>
     </form>
 </body>
