cart page updated

--- a/first_web/cart/templates/cart/cart.html
+++ b/first_web/cart/templates/cart/cart.html
@@ -11,7 +11,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
   <div class="d-flex justify-content-center justify-content-md-start section">
     <div class="col-11 col-md-6 col-lg-5 ms-md-3 mb-4">
       <!-- Continue -->
-      <div class="d-md-none col-7 col-sm-5 border-bottom border-2 p-3 position-sticky bg-white mt-2 rounded-3" style="top: 2%;">
+      <div class="d-md-none col-7 col-sm-5 border-bottom border-2 p-3 position-sticky bg-white mt-2 rounded-3" style="top: 2%;z-index: 1;">
         <div class="d-flex justify-content-between fw-bold align-items-end mb-1">
           <p class="fs-6 m-0">Total Price:</p>
           <p class="fs-6 m-0">{{total}}$</p>
