--- a/first_web/accounts/templates/accounts/register.html
+++ b/first_web/accounts/templates/accounts/register.html
@@ -1,5 +1,63 @@
 {% extends 'main.html' %} {% block title %}register{% endblock %} {% block body%} {% load static %}
-<link rel="stylesheet" href="{% static 'signin.css' %}" />
+<head>
+  <style>
+    body{
+      overflow-x: hidden;
+    }
+    .toasto {
+    animation: start 5s alternate;
+}
+
+@keyframes start {
+    0% {
+        top: 20px;
+        right: -15rem;
+    }
+
+    10% {
+        top: 20px;
+        right: 20px;
+    }
+    20% {
+        top: 20px;
+        right: 20px;
+    }
+    30% {
+        top: 20px;
+        right: 20px;
+    }
+    40% {
+        top: 20px;
+        right: 20px;
+    }
+    50% {
+        top: 20px;
+        right: 20px;
+    }
+    60% {
+        top: 20px;
+        right: 20px;
+    }
+    70% {
+        top: 20px;
+        right: 20px;
+    }
+    80% {
+        top: 20px;
+        right: 20px;
+    }
+    90% {
+        top: 20px;
+        right: 20px;
+    }
+    100% {
+        top: 20px;
+        right: -15rem;
+    }
+}
+</style>
+  <link rel="stylesheet" href="{% static 'signin.css' %}" />
+</head>
 <body>
   <div
     style="
