--- a/first_web/accounts/templates/accounts/change.html
+++ b/first_web/accounts/templates/accounts/change.html
@@ -4,10 +4,67 @@
 {% block body %}
 <head>
 <link rel="stylesheet" href="{% static 'change.css' %}" />
+<style>
+    body{
+      overflow-x: hidden;
+    }
+    .toasto {
+    animation: start 5s alternate;
+}
+
+@keyframes start {
+    0% {
+        top: 20px;
+        right: -15rem;
+    }
+
+    10% {
+        top: 20px;
+        right: 20px;
+    }
+    20% {
+        top: 20px;
+        right: 20px;
+    }
+    30% {
+        top: 20px;
+        right: 20px;
+    }
+    40% {
+        top: 20px;
+        right: 20px;
+    }
+    50% {
+        top: 20px;
+        right: 20px;
+    }
+    60% {
+        top: 20px;
+        right: 20px;
+    }
+    70% {
+        top: 20px;
+        right: 20px;
+    }
+    80% {
+        top: 20px;
+        right: 20px;
+    }
+    90% {
+        top: 20px;
+        right: 20px;
+    }
+    100% {
+        top: 20px;
+        right: -15rem;
+    }
+}
+  </style>
 </head>
 <body style="background: #1c1e1f; 
 background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
 background: linear-gradient(to right, #38393b, #1c1e1f);">
+<h1 class="text-white pt-4 ps-3">Change Password</h1>
     <form action="" method="post" class="col-8 offset-2 mt-5 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
         {% csrf_token %}
     <div class="py-5 px-5 bg-white border" style="border-radius: 20px;">
