--- a/first_web/accounts/templates/accounts/complete.html
+++ b/first_web/accounts/templates/accounts/complete.html
@@ -1,5 +1,18 @@
 {% extends 'main.html' %}
 {% block title %}complete{% endblock %}
 {% block body %}
-<p>you can login now</p>
+<head>
+    <style>
+        .footer-clean{
+            display: none;
+        }
+    </style>
+</head>
+<body style="background: #1c1e1f; 
+background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
+background: linear-gradient(to right, #38393b, #1c1e1f);">
+<div style="height: 85vh;" class="text-white d-flex justify-content-center align-items-center">
+    <h2 style="text-transform: capitalize;">you can login now</h2>
+</div>
+</body>
 {% endblock %}
