--- a/first_web/accounts/templates/accounts/history.html
+++ b/first_web/accounts/templates/accounts/history.html
@@ -1,9 +1,17 @@
 {% extends 'main.html' %}
 {% block title %}phone_login{% endblock %}
 {% block body %}
+<head>
+    <style>
+        .footer-clean{
+            display: none;
+        }
+    </style>
+</head>
 <body style="background: #1c1e1f; 
 background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
 background: linear-gradient(to right, #38393b, #1c1e1f);">
+<h1 class="text-white pt-4 ps-3">Orders</h1>
     <div class="py-5">
         {% for i in data %}
         <div class="card mb-5 border-0 border-bottom col-10 offset-1" style="position: relative;">
