--- a/first_web/accounts/templates/accounts/update.html
+++ b/first_web/accounts/templates/accounts/update.html
@@ -14,9 +14,9 @@
 <body style="background: #1c1e1f; 
 background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
 background: linear-gradient(to right, #38393b, #1c1e1f);">
-    <h1 class="text-white pt-2 ps-3">Edit Profile</h1>
+    <h1 class="text-white pt-4 ps-3">Edit Profile</h1>
     <form action="" class="d-flex justify-content-center mb-5" method="post" enctype="multipart/form-data">
-      <div class="border py-3 d-flex flex-column align-items-center bg-white col-10 col-md-6 col-lg-5" style="border-radius: .6rem;">
+      <div class="border pt-3 pb-4 d-flex flex-column align-items-center bg-white col-10 col-md-6 col-lg-5" style="border-radius: .6rem;">
       <div class="d-flex justify-content-center mb-4">
       <div style="position: relative;width: fit-content;height: fit-content;">
         <img src="{{request.user.profile.profile_image.url}}" style="width: 10rem;height: 10rem;border-radius: 50%;" class="border border-dark p-1" alt="">
